k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-house
  namespace: green-house
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  ingressClassName: traefik
  rules:
    - host: green-house.sjw-project.site
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: green-house-backend
                port:
                  number: 8080
          - path: /api-docs
            pathType: Prefix
            backend:
              service:
                name: green-house-backend
                port:
                  number: 8080
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: green-house-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green-house-frontend
                port:
                  number: 3000
